# syncthing-manager

./: .gitignore  LICENSE  README.es.md  README.md  THIRD_PARTY_LICENSES.md  devices.example.yml  pyproject.toml
.github/: release-notes.md
.github/ISSUE_TEMPLATE/: 1-bug_report.md  3-bug_report_es.md  config.yml  feature_request.md  (+1 more)
assets/: make_icon.py  make_screenshots.py  make_social_preview.py
docs/: README.es.md  README.md  integration-patterns.es.md  integration-patterns.md  syncthing-concepts.es.md  syncthing-concepts.md  syncthing-rest-api.es.md  syncthing-rest-api.md
syncthing_manager/: __main__.py  _dispatch.py  agent.py  applock.py  cli.py  config.py  credentials.py  device_names.py  discovery.py  generate.py  i18n.py  models.py  renamer.py  ssh_ops.py  syncthing.py  topology.py  translations_en.py  validation.py  winrm_ops.py
tests/: test_agent_crypto.py  test_agent_substep.py  test_applock.py  test_batch_fixes.py  test_cli_cluster_ops.py  test_cli_dispatch_and_state.py  test_cli_undo.py  test_config.py  test_credentials.py  test_delete_folder.py  test_device_names.py  test_discovery.py  test_embed_template.py  test_execute_abandon.py  test_generate_arch.py  test_gui_structure.py  test_headless_topology.py  test_i18n.py  test_renamer.py  test_session_creds.py  test_ssh_ops.py  test_syncthing.py  test_topology.py  test_topology_diff.py  test_topology_extras.py  test_topology_issues.py  test_topology_name_map.py  test_topology_persist.py  test_topology_reconcile.py  test_topology_roles.py  test_unshare_unlink.py  test_validation.py
(+11 files in other folders)
